SIMPLEX-60 Add fix severity.